--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "3.0",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.35.2"
   }
 }
